--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </body>
 <script> 
  const userName = prompt('Dear, what is your name?')
- alert ('Hello ${userName} How are you? This is JS world!')
+ alert (`Hello ${userName} How are you? This is JS world!`)
 </script>
 </html> 
