--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>This is the first JS lesson</h1>
+  <h1 class="total">This is SECONDO (italiano) lesson</h1>
 </body>
-<script> 
- const userName = prompt('Dear, what is your name?')
- alert (`Hello ${userName} How are you? This is JS world!`)
-</script>
-</html> 
+<script src="script.js"></script>
+
+</html>
