--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1 class="total">This is SECONDO (italiano) lesson</h1>
+  <h1 class="total">This is QUARTO (italiano) lesson</h1>
 </body>
 <script src="script.js"></script>
 
